--- a/shopping/assets/less/blog.less
+++ b/shopping/assets/less/blog.less
@@ -276,7 +276,7 @@
             color: @text-color;
            font-size: 13px;
            padding-right: 4px;
-           ont-family: FontAwesome;
+           font-family: FontAwesome;
           }
         }
        }
